--- a/.nais/preprod.yaml
+++ b/.nais/preprod.yaml
@@ -48,7 +48,9 @@ spec:
       value: "{{ namespace }}"
     - name: APP_VERSION
       value: "{{ version }}"
-    - name: SECURITYTOKENSERVICE_URL
+    - name: SECURITY_TOKEN_SERVICE_DISCOVERY_URL
+      value: "https://security-token-service.nais.preprod.local/rest/v1/sts/.well-known/openid-configuration"
+    - name: SECURITY_TOKEN_SERVICE_SAML_URL
       value: "https://security-token-service.nais.preprod.local/rest/v1/sts/ws/samltoken"
     - name: SECURITY_TOKEN_SERVICE_TOKEN_URL
       value: "https://security-token-service.nais.preprod.local/rest/v1/sts/token"
