[OPP-1379] oppsett av eksterne mocker ved lokal kjøring

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
 
         <!-- Testing -->
         <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
