--- a/.nais/preprod.yaml
+++ b/.nais/preprod.yaml
@@ -58,5 +58,7 @@ spec:
       value: "https://modapp-q1.adeo.no/henvendelse/services/domene.Virksomhet/Dialog_v1"
     - name: PDL_URL
       value: "https://pdl-api.nais.preprod.local/graphql"
+    - name: UNLEASH_API_URL
+      value: "https://unleash.nais.io/api/"
     - name: CXF_SECURE_LOG
       value: "enabled"
