--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -56,6 +56,8 @@ spec:
       value: "https://security-token-service.nais.adeo.no/rest/v1/sts/token"
     - name: HENVENDELSE_DIALOG_V1_URL
       value: "https://modapp.adeo.no/henvendelse/services/domene.Virksomhet/Dialog_v1"
+    - name: SF_HENVENDELSE_URL
+      value: ""
     - name: PDL_URL
       value: "https://pdl-api.nais.adeo.no/graphql"
     - name: UNLEASH_API_URL
