--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -57,9 +57,9 @@ spec:
     - name: HENVENDELSE_DIALOG_V1_URL
       value: "https://modapp.adeo.no/henvendelse/services/domene.Virksomhet/Dialog_v1"
     - name: SF_HENVENDELSE_URL
-      value: ""
+      value: "https://sf-henvendelse.intern.nav.no/api"
     - name: KODEVERK_URL
-      value: ""
+      value: "https://kodeverk.nais.adeo.no/"
     - name: PDL_URL
       value: "https://pdl-api.nais.adeo.no/graphql"
     - name: UNLEASH_API_URL
