--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,4 +7,8 @@ management.endpoints.web.base-path=/internal
 management.endpoints.web.exposure.include=prometheus
 management.metrics.export.prometheus.enabled=true
 
+# Comma-seperated whitelist of cachenames in application
+spring.cache.cache-names=pdl-aktorider
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterAccess=60s,expireAfterWrite=60s
+
 cxf.path=/ws
