--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -38,6 +38,13 @@ spec:
     min: 2
     max: 4
     cpuThresholdPercentage: 50
+  azure:
+    application:
+      enabled: true
+      tenant: nav.no
+      claims:
+        extra:
+          - "NAVident"
   vault:
     enabled: true
     paths:
