--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,17 +72,17 @@ jobs:
           RESOURCE: .nais/preprod-q2.yaml
           VAR: version=${{ github.sha }}
 
-  deploy-prod:
-    name: Deploy to prod
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          PRINT_PAYLOAD: true
-          CLUSTER: prod-fss
-          RESOURCE: .nais/prod.yaml
-          VAR: version=${{ github.sha }}
+#  deploy-prod:
+#    name: Deploy to prod
+#    needs: build
+#    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#      - uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          PRINT_PAYLOAD: true
+#          CLUSTER: prod-fss
+#          RESOURCE: .nais/prod.yaml
+#          VAR: version=${{ github.sha }}
