--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,10 +16,11 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'zulu'
       - uses: nbadal/action-ktlint-setup@v1
         with:
           ktlint_version: '0.40.0'
-      - uses: actions/cache@v1
+      - uses: actions/cache@v3
         with:
           path: ~/.m2
           key: ${{ runner.os }}-maven-cache-${{ hashFiles('pom.xml') }}
