--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,6 +11,9 @@ jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest
+    permissions:
+      packages: 'write'
+      contents: 'read'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
